# Labaratory3

./: CMakeLists.txt  main.cpp
aircraft/: Aircraft.cpp  Aircraft.h  test.py
combinations/airplane/: Airplane.cpp  Airplane.h
combinations/modernOrnitopter/: ModernOrnitopter.cpp  ModernOrnitopter.h
mover/flappingWing/: FlappingWing.cpp  FlappingWing.h
mover/jetNozzle/: AircraftWithJetNozzle.cpp  AircraftWithJetNozzle.h
mover/paddlePropeller/: AircraftWithPaddlePropeller.cpp  AircraftWithPaddlePropeller.h
